--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tailwindcss/vite": "^4.0.12",
     "astro": "^5.4.2",
     "gsap": "npm:@gsap/business@^3.12.7",
+    "lenis": "^1.2.3",
     "tailwindcss": "^4.0.12"
   }
 }
